Added main picure fixed text color in agency.min.css

--- a/css/agency.css
+++ b/css/agency.css
@@ -226,7 +226,7 @@ fieldset[disabled] .btn-xl.active {
   }
 }
 header {
-  background-image: url('../img/header-bg.jpg');
+  background-image: url('../img/waterIsland.jpg');
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
@@ -254,6 +254,7 @@ header .intro-text .intro-heading {
   font-size: 50px;
   line-height: 50px;
   margin-bottom: 25px;
+  color:green;
 }
 @media (min-width: 768px) {
   header .intro-text {
@@ -273,6 +274,7 @@ header .intro-text .intro-heading {
     font-size: 75px;
     line-height: 75px;
     margin-bottom: 50px;
+    color:green;
   }
 }
 section {
