--- a/css/agency.css
+++ b/css/agency.css
@@ -555,7 +555,7 @@ aside.clients img {
 }
 section#contact {
   background-color: #222222;
-  background-image: url('../img/map-image.png');
+  background-image: url('../img/sky.JPG');
   background-position: center;
   background-repeat: no-repeat;
 }
