--- a/scss/agency.scss
+++ b/scss/agency.scss
@@ -374,7 +374,7 @@ section {
             height: 80px;
             position: absolute;
             z-index: 100;
-            background-color: $theme-primary;
+            background-color: white;
             color: white;
             border-radius: 100%;
             border: 7px solid #f1f1f1;
@@ -534,7 +534,7 @@ aside.clients {
 
 section#contact {
     background-color: $gray-darker;
-    background-image: url('../img/map-image.png');
+    background-image: url('../img/sky.JPG');
     background-position: center;
     background-repeat: no-repeat;
     .section-heading {
