--- a/css/agency.css
+++ b/css/agency.css
@@ -226,7 +226,7 @@ fieldset[disabled] .btn-xl.active {
   }
 }
 header {
-  background-image: url('../img/waterIsland.jpg');
+  background-image: url('../img/waterisland.jpg');
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
@@ -555,7 +555,7 @@ aside.clients img {
 }
 section#contact {
   background-color: #222222;
-  background-image: url('../img/sky.JPG');
+  background-image: url('../img/sky.jpg');
   background-position: center;
   background-repeat: no-repeat;
 }
