--- a/less/agency.less
+++ b/less/agency.less
@@ -167,7 +167,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 header {
-    background-image: url('../img/waterIsland.jpg');
+    background-image: url('../img/waterisland.jpg');
     background-repeat: no-repeat;
     background-attachment: scroll;
     background-position: center center;
@@ -536,7 +536,7 @@ aside.clients {
 
 section#contact {
     background-color: @gray-darker;
-    background-image: url('../img/sky.JPG');
+    background-image: url('../img/sky.jpg');
     background-position: center;
     background-repeat: no-repeat;
     .section-heading {
