--- a/css/agency.css
+++ b/css/agency.css
@@ -226,7 +226,7 @@ fieldset[disabled] .btn-xl.active {
   }
 }
 header {
-  background-image: url('/Users/samuelrosenbluth/Desktop/galvanize/portfolio/personalWebsite/img/waterisland.png');
+  background-image: url('../img/waterisland.png');
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
